--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </ul>
         </div>
     </nav>
+    <div>Hello, This project is just for learning and practicing.</div>
     <script src="script.js"></script>
 </body>
 </html>
